# reverse-regex

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: index.html  index.js
docs/reverse-regex/: package.json  reverse_regex.d.ts  reverse_regex.js  reverse_regex_bg.wasm  reverse_regex_bg.wasm.d.ts
src/: engine.rs  lib.rs  main.rs
src/tests/: engine.rs  wasm.rs
tests/: engine.rs  wasm.rs
