[package]
name = "reverse_regex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"
regex = "1.10.6"
regex-syntax = "0.8.4"
rand = { version = "0.8.5", features = []}
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
#opt-level = "s"